Remove underline from logo link

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <div class="container">
                 <nav id="navbar" class="flex-navbar">
                     <div class="logo-wrapper">
-                        <a href="#"><img id="custom-logo" src="Replik8.svg" alt="Replik8.com">.com</a>
+                        <a class="no-underline" href="#"><img id="custom-logo" src="Replik8.svg" alt="Replik8.com">.com</a>
                     </div>
                     <ul class="links-wrapper">
                         <li><a href="#plugin">Get a quote</a></li>
