Add full address

--- a/index.html
+++ b/index.html
@@ -58,7 +58,8 @@
                     <div class="footer-pt footer-pt1">
                         <h4>Looking for 3D Printed Parts and Additive Manufacturing Services?</h4>
                         <ul>
-                            <li>Oriel Court</li>
+                            <li>3 Oriel Court, Omega Park, Alton</li>
+                            <li>Hampshire, GU34 2YT, UK</li>
                             <li><a href="#">www.replik8.com</a></li>
                             <li><a href="mailto:info@replik8.com">info@replik8.com</a></li>
                         </ul>
@@ -70,6 +71,7 @@
                         <ul>
                             <li><a href="#!"><br></a></li>
                             <li><a href="#plugin">Get a Quote</a></li>
+                            <li><a href="#!">Find Out More</a></li>
                             <li><a href="#!">Privacy Policy</a></li>
                             <li><a href="#!">Terms & Conditions</a></li>
                         </ul>
